[project]
name = "uwb_doc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "gooey>=1.0.8.1",
    "markdownify>=1.1.0",
    "mkdocs>=1.6.1",
    "mkdocs-bootswatch>=1.1",
    "mkdocs-gitbook>=0.0.1",
    "mkdocs-material>=9.6.14",
    "mkdocs-terminal>=4.7.0",
    "mkdocs-windmill>=1.0.5",
    "pymdown-extensions>=10.15",
    "python-docx>=1.1.2",
]

[project.scripts]
mkdocs = "mkdocs.__main__:cli"

[tool.uv]
package = true
